# arrow-view-state

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  README.md
.github/workflows/: ci.yml
docs/: feature-flags.md  index-types.md
src/: builder.rs  error.rs  evaluate.rs  filter.rs  hash_index.rs  inverted_index.rs  lib.rs  mmap_builder.rs  permutation.rs  persist.rs  scalar_value.rs  selection.rs  sort_builder.rs  storage.rs  tests.rs
