[package]
name        = "arrow-view-state"
version     = "0.2.0"
edition     = "2024"
rust-version = "1.85"
license     = "MIT OR Apache-2.0"
description = "High-performance columnar permutation index and filter engine for Apache Arrow"
keywords    = ["arrow", "sort", "index", "columnar", "permutation"]
categories  = ["data-structures", "science"]
publish     = false

[dependencies]
# Core Arrow — only what we use. No umbrella crate.
arrow-array  = { version = ">=53", default-features = false }
arrow-row    = { version = ">=53", default-features = false }
arrow-schema = { version = ">=53", default-features = false }
arrow-select = { version = ">=53", default-features = false }

# Error handling
thiserror = "2"

# Structured logging
tracing = { version = "0.1", default-features = false }

# Parallel sort (feature-gated)
rayon = { version = "1", optional = true }

# Roaring Bitmap filter index
roaring = "0.10"

[dev-dependencies]
arrow-cast = ">=53"
proptest   = "1"

[features]
default  = ["parallel"]
parallel = ["dep:rayon"]

[lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic         = { level = "warn", priority = -1 }
must_use_candidate = "allow"
unwrap_used      = "deny"
panic = "deny"
